--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,50 @@
 firebase-credentials/
-hackathon.sql
+*.sql
+
+ia/.env
+# Dependencies
+/node_modules
+/vendor
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
+
+# Build output
+/dist
+/build
+/out
+
+# Cache and temporary files
+.cache/
+.temp/
+*.tmp
+
+# API keys and credentials
+**/credentials.*
+**/credentials/
+*.pem
+*.key
+
+# Database files
+*.sqlite
+*.db
+
+# System files
+.DS_Store
+Thumbs.db
